import { describe, it, expect } from 'vitest';
import { buildComponentModel } from '../../components/model';
import { resolveTokens } from '../../tokens/resolver';
import { renderComponent } from '../../templates/engine';
import { Framework, ThemePreset, StyleSystem, ComponentName } from '../../core/enums';

const mockConfig = {
  framework: Framework.React,
  theme: ThemePreset.Minimal,
  styleSystem: StyleSystem.CSS,
  tokens: {
    color: {
      primary: '#6C63FF',
      secondary: '#F3F2FF',
      surface: '#FFFFFF',
      background: '#F8F9FA',
      border: '#E2E1F0',
      text: '#1A1A2E',
      textMuted: '#6B6B8A',
      destructive: '#E24B4A',
      success: '#1D9E75',
    },
    radius: { sm: '4px', md: '8px', lg: '12px' },
    spacing: { unit: '4px' },
    typography: { fontFamily: 'system-ui, sans-serif', scaleBase: '16px' },
  },
  features: { hover: true, focusRing: true, motionSafe: true },
  a11y: {
    focusRingColor: 'var(--color-primary)',
    focusRingWidth: '2px',
    focusRingOffset: '3px',
    reduceMotion: true,
  },
} as any;

describe('Badge snapshots', () => {
  it('react css mode snapshot', async () => {
    const tokens = resolveTokens(mockConfig);
    const model = buildComponentModel(ComponentName.Badge, tokens, mockConfig, true);
    const files = await renderComponent(model);

    expect(files['Badge.tsx']).toMatchSnapshot();
    expect(files['Badge.module.css']).toMatchSnapshot();
    expect(files['Badge.stories.tsx']).toMatchSnapshot();

    expect(files['Badge.tsx']).toContain('export const Badge');
    expect(files['Badge.tsx']).not.toContain('Object.assign');
    // All seven variants present in the stylesheet
    expect(files['Badge.module.css']).toContain('.badge--destructive');
    expect(files['Badge.module.css']).toContain('.badge--outline');
  });

  it('react scss mode snapshot', async () => {
    const config = { ...mockConfig, styleSystem: StyleSystem.SCSS };
    const tokens = resolveTokens(config);
    const model = buildComponentModel(ComponentName.Badge, tokens, config, true);
    const files = await renderComponent(model);

    expect(files['Badge.module.scss']).toMatchSnapshot();
    expect(files['Badge.tsx']).toContain("import styles from './Badge.module.scss'");
  });

  it('react tailwind mode snapshot', async () => {
    const config = { ...mockConfig, styleSystem: StyleSystem.Tailwind };
    const tokens = resolveTokens(config);
    const model = buildComponentModel(ComponentName.Badge, tokens, config, true);
    const files = await renderComponent(model);

    expect(files['Badge.tsx']).toMatchSnapshot();
    expect(files['Badge.module.css']).toBeUndefined();
    expect(files['Badge.tsx']).not.toContain('Badge.module');
    // Variant map sourced from the manifest tailwindDefaults
    expect(files['Badge.tsx']).toContain('VARIANT_CLASSES');
    expect(files['Badge.tsx']).toContain('bg-[var(--color-primary)]');
  });

  it('vue css mode snapshot', async () => {
    const config = { ...mockConfig, framework: Framework.Vue };
    const tokens = resolveTokens(config);
    const model = buildComponentModel(ComponentName.Badge, tokens, config, true);
    const files = await renderComponent(model);

    expect(files['Badge.vue']).toMatchSnapshot();
    expect(files['Badge.vue']).toContain('badge--${variant}');
  });

  it('angular css mode snapshot (monolithic)', async () => {
    const config = { ...mockConfig, framework: Framework.Angular };
    const tokens = resolveTokens(config);
    const model = buildComponentModel(ComponentName.Badge, tokens, config, true);
    const files = await renderComponent(model);

    expect(files['badge.component.ts']).toMatchSnapshot();
    expect(files['badge.component.html']).toMatchSnapshot();
    expect(files['badge.component.ts']).toContain('export class BadgeComponent');
    expect(files['badge.component.ts']).not.toContain('Object.assign');
  });
});
